# promptior-ia

./: README.md
ChatBotPromptior/my-app/: Dockerfile  Documentación promptior.docx  README.md  data.txt  pyproject.toml  requirements.txt
ChatBotPromptior/my-app/app/: server.py
